Fix issue with back button on ssafari (same issue we had with auction nav button on safari)

--- a/packages/nouns-webapp/src/components/ProposalHeader/ProposalHeader.module.css
+++ b/packages/nouns-webapp/src/components/ProposalHeader/ProposalHeader.module.css
@@ -1,4 +1,6 @@
 .backButton {
+  -webkit-appearance: none;
+  padding: 0;
   display: inline-block;
   width: 2rem;
   height: 2rem;
